Fix mobile userMenu collapse layout error and add hover style

--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -22,7 +22,14 @@
   li:not(:last-child){
     margin-bottom: 16px;
   }
-  .dropdown-item:hover{
+  .dropdown-item:hover,.dropdown-item:active{
+    background-color: $light;
+    color: $primary;
+  }
+}
+.homepage-collapse{
+  .dropdown-item:hover,.dropdown-item:active{
+    background-color: $light;
     color: $primary;
   }
 }
